--- a/example.env
+++ b/example.env
@@ -9,7 +9,7 @@ RAILS_SERVE_STATIC_FILES=true
 I18N_AVAILABLE_LOCALES=en,ru
 
 # The default locale for the app.
-I18N_DEFAULT_LOCALE=en
+I18N_DEFAULT_LOCALE=en,ru
 
 # Timeout enforced by the slowpoke gem.
 SLOWPOKE_TIMEOUT=20
